ecokilo-backend/error5.log
file:///C:/Users/Jashndeep%20Bhatia/Desktop/helloji/ecokilo-backend/src/routes/escrowRoutes.js:3
import { verifyToken } from '../middleware/auth.middleware.js';
         ^^^^^^^^^^^
SyntaxError: The requested module '../middleware/auth.middleware.js' does not provide an export named 'verifyToken'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.0
